--- a/templates/search.html
+++ b/templates/search.html
@@ -19,7 +19,7 @@
           request.form.page1 }}">
           <input type="text" placeholder="Page" name="page2" value="{{
           request.form.page2 }}">
-          <h5> Từ trang {{page1}} đến trang {{page2}} bạn có muốn bỏ trang nào không? (nhập 0 nên muốn lấy hết các trang)</h5>
+          <h5> Bạn có muốn bỏ trang nào không? (nhập 0 nên muốn lấy hết các trang)</h5>
          <input type="text" placeholder="Page No Need" name="listPage" value="{{
           request.form.listPage}}">
         <input class="btn btn-default" type="submit" value="Submit">
