--- a/templates/search.html
+++ b/templates/search.html
@@ -14,6 +14,8 @@
           request.form.quan }}">
           <input type="text" placeholder="Xã" name="xa" value="{{
           request.form.xa }}">
+          <input type="text" placeholder="Ngành nghề" name="nganhnghe" value="{{
+          request.form.nganhnghe }}">
         <input class="btn btn-default" type="submit" value="Submit">
       </form>
     </div>
