--- a/templates/search.html
+++ b/templates/search.html
@@ -14,7 +14,7 @@
           request.form.quan }}">
           <input type="text" placeholder="Xã" name="xa" value="{{
           request.form.xa }}">
-          <input type="text" placeholder="Ngành nghề" name="nganhnghe" value="{{
+          <input type="text" placeholder="Ngành nghề (nhập 0 nếu muốn biết tất cả các công ty" name="nganhnghe" value="{{
           request.form.nganhnghe }}">
         <input class="btn btn-default" type="submit" value="Submit">
       </form>
